# amazon-kinesis-video-streams-webrtc-sdk-c

./: .gitignore  .gitmodules  CMakeLists.txt  ChannelInfo_8c.html  ChannelInfo_8h.html  ChannelInfo_8h_source.html  Client_8c.html  ConnectionListener_8c.html  ConnectionListener_8h.html  ConnectionListener_8h_source.html  Crypto_8c.html  Crypto_8h.html  Crypto_8h_source.html  DataChannel_8c.html  DataChannel_8h.html  DataChannel_8h_source.html  Deserialize_8c.html  Dtls_8c.html  Dtls_8h.html  Dtls_8h_source.html  Dtls__mbedtls_8c.html  Dtls__openssl_8c.html  FileCache_8c.html  FileCache_8h.html  FileCache_8h_source.html  IOBuffer_8c.html  IOBuffer_8h.html  IOBuffer_8h_source.html  IceAgentStateMachine_8c.html  IceAgentStateMachine_8h.html  IceAgentStateMachine_8h_source.html  IceAgent_8c.html  IceAgent_8h.html  IceAgent_8h_source.html  IceUtils_8c.html  IceUtils_8h.html  IceUtils_8h_source.html  Include_8h.html  Include_8h_source.html  Include__i_8h.html  (+523 more)
CMake/: Utilities.cmake
CMake/Dependencies/: libbenchmark-CMakeLists.txt  libgperftools-CMakeLists.txt  libgtest-CMakeLists.txt  libjsmn-CMakeLists.txt  libkvsCommonLws-CMakeLists.txt  libmbedtls-CMakeLists.txt  libopenssl-CMakeLists.txt  libsrtp-CMakeLists.txt  libwebsockets-CMakeLists.txt
sample-lib-dependent/: CMakeLists.txt  Common.c  README.md  kvsWebRTCClientMasterGstreamerSample.c
samples/: Common.c  Samples.h  kvsWebRTCClientMaster.c  kvsWebRTCClientMasterGstreamerSample.c
src/include/com/amazonaws/kinesis/video/webrtcclient/: Include.h
src/source/Ice/: IceAgent.h
src/source/PeerConnection/: PeerConnection.c
utils/: .gitignore  start-gs.sh  start.sh  telepresence.service
